# zkcsp-over-bitcoin

./: Makefile  README.md  my_libscapi_test.cxx  my_libscapi_test_main.cxx
Circuits/: ourFunctionFinal.txt  remainder.cpp
SNARK/: Makefile  crs_checks.hpp  gadget.hpp  main.cpp
SNARK-sudoku/: Makefile  gadget.hpp  gadget.tcc  main.cpp  pairing-checks.hpp  pairing-checks.tcc  snark.hpp  snark.tcc  sudoku_gadget.hpp  sudoku_gadget.tcc
ShachamWaters/: Makefile  gadget.hpp  gadget.tcc  main.cpp  to_compile
ShachamWaters/mylib/: gadget.hpp  gadget.tcc  main.cpp  mylib.cpp  snark.hpp  snark.tcc  to_compile
Yao/: AesInputs1.txt  AesInputs2.txt  CMakeLists.txt  LICENSE-SCAPI  README  YaoSEParty.cpp  YaoSEParty.h
Yao/CircuitInputs/: input-mac-p1.txt  input-mac-p2.txt
YaoSingleExecution/: CMakeCache.txt  CMakeLists.txt  Makefile  YaoSEParty.cpp  YaoSEParty.h  cmake_install.cmake  emp_format_circuit.txt
crs_checks_WI/: Makefile  crs_checks.cpp
